--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "peet86/reports",
+	"name": "peet86/craft-reports",
 	"description": "Reports for Craft 3",
 	"type": "craft-plugin",
 	"authors": [
